--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "concurrently": "^4.1.1",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
+    "jquery": "^3.4.1",
     "path": "^0.12.7",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
@@ -16,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev" : "concurrently \"react-scripts build\" \"node server.js\" "
+    "dev": "concurrently \"react-scripts build\" \"node server.js\" "
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
