--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.11",
